# accessRating.info_backend

./: .coverage  .env.prod.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  businesses.json  conftest.py  conftest.py.backup  docker-compose.prod.yml  docker-compose.yml
backend/: .coverage  .env.example  README.md  conftest.py  manage.py  pyproject.toml  pytest.ini  requirements-prod.txt  requirements.txt
backend/accessibility_api/: asgi.py  dev_settings.py  prod_settings.py  settings.py  test_settings.py  urls.py  wsgi.py
backend/apps/accounts/: adapters.py  admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/accounts/tests/: test_auth.py  test_models.py  test_serializers.py  test_views.py
backend/apps/businesses/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/businesses/migrations/: 0001_initial.py  0002_remove_business_what3words_alter_business_latitude_and_more.py  0003_remove_what3words.py
backend/apps/businesses/tests/: test_fragment_view.py  test_models.py  test_search_html.py  test_serializers.py  test_urls.py  test_views.py
backend/apps/core/: __init__.py  views.py
backend/templates/businesses/: business_card.html  business_cards.html  business_detail.html  business_detail_fragment.html
caddy/: Caddyfile  Caddyfile.dev
docker/: Dockerfile  docker-compose.prod.yml
docs/: AccessRating_Overview.docx  AccessratingOverview.md  DEPLOYMENT.md  HTMX_API_Best_Practices.md  MVP_Development_Plan.md  QUICKSTART.md  (+6 more)
(+16 files in other folders)
